plugins {
  id 'java'
  id "com.gradleup.shadow" version "9.0.0-beta4"
  id 'maven-publish'
}

group = 'mikeshafter'
version = '2.20.503'

compileJava.options.encoding = 'UTF-8'

repositories {
  maven { url = 'https://repo.papermc.io/repository/maven-public/' }
  maven { url = 'https://ci.mg-dev.eu/plugin/repository/everything' }
  maven { url = 'https://jitpack.io' }
  maven { url = 'https://oss.sonatype.org/content/groups/public/' }
  maven { url = 'https://repo.opencollab.dev/main/' }
  mavenLocal()
  mavenCentral()
}


def srcDir = file("src/main/java")

task preprocessJava {
  doLast {
    println "=== Renaming .java → -u.java ==="

    fileTree(srcDir).matching {
      include "**/*.java"
      exclude "**/*-u.java"
    }.files.each { File f ->
      def renamed = new File(f.parentFile, f.name.replace(".java", "-u.java"))
      if (!f.renameTo(renamed)) {
        throw new GradleException("Failed to rename $f")
      }
    }

    println "=== Running cpp and cleaning output ==="

    fileTree(srcDir).matching {
      include "**/*-u.java"
    }.files.each { File f ->
      def output = new File(f.parentFile, f.name.replace("-u.java", ".java"))

      // Run cpp
      exec {
        commandLine "cpp", f.absolutePath, output.absolutePath
      }

      // Remove lines starting with #
      def cleaned = output.readLines()
              .findAll { !it.trim().startsWith("#") }

      output.text = cleaned.join(System.lineSeparator())
    }
  }
}

task cleanupPreprocessed {
  doLast {
    println "=== Cleaning generated .java files ==="

    // Delete generated .java files (NOT ending with -u.java)
    fileTree(srcDir).matching {
      include "**/*.java"
      exclude "**/*-u.java"
    }.files.each { File f ->
      if (!f.delete()) {
        throw new GradleException("Failed to delete $f")
      }
    }

    println "=== Cleaning and restoring original sources ==="

    // Clean and restore -u.java back to .java
    fileTree(srcDir).matching {
      include "**/*-u.java"
    }.files.each { File f ->

      // Remove lines starting with #
      def cleaned = f.readLines()
              .findAll { !it.trim().startsWith("#") }

      f.text = cleaned.join(System.lineSeparator())

      // Rename back to original
      def restored = new File(f.parentFile, f.name.replace("-u.java", ".java"))
      if (!f.renameTo(restored)) {
        throw new GradleException("Failed to restore $f")
      }
    }
  }
}

tasks.named("compileJava", JavaCompile) {
  dependsOn preprocessJava
  finalizedBy cleanupPreprocessed

  // Only compile generated .java files (not -u.java)
  source = fileTree(srcDir).matching {
    include "**/*.java"
    exclude "**/*-u.java"
  }
}

java { toolchain {
  languageVersion = JavaLanguageVersion.of(21)
}}

dependencies {
  compileOnly 'com.github.MilkBowl:VaultAPI:1.7.1'
  compileOnly 'com.bergerkiller.bukkit:BKCommonLib:1.20.6-v1'
  //compileOnly 'org.geysermc.geyser:api:2.2.0-SNAPSHOT'
  compileOnly 'io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT'

  compileOnly 'org.incendo:cloud-paper'
  compileOnly 'org.incendo:cloud-annotations'
  compileOnly 'org.incendo:cloud-minecraft-extras'
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << '-Xlint:unchecked'
  options.deprecation = true
}

shadowJar {
  minimize {}
  relocate ('org.incendo.cloud', 'com.bergerkiller.bukkit.common.dep.cloud')
  //relocate ('io.leangen.geantyref', 'com.bergerkiller.bukkit.common.dep.typetoken')
  //relocate ('me.lucko.commodore', 'com.bergerkiller.bukkit.common.dep.me.lucko.commodore')
}

assemble {
  dependsOn shadowJar
}

test {
  useJUnitPlatform()
}
